# interview-voice-agent-demo

./: .gitignore  gemini_live.py  index.html  main.py  pyproject.toml  server.py  test2.py
frontend/: index.html  package-lock.json  package.json
frontend/public/: pcm-processor.js
frontend/src/: InterviewPage.tsx  main.tsx
frontend/src/components/: InterviewRoom.tsx
